--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ p.bees {
 	font-size: 300%;
 	font-weight: bolder;
 }
+p.bees2 {
+	font-family: "Verdana";
+	font-size: 400%;
+	font-weight: bolder;
+}
 ul {
 	font-family: "Lucida Grande";
 	font-size: 125%;
