--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 body {
-	text-align: center;
-	background-color: #f2d45e;
+    text-align: center;
+    background: linear-gradient(rgb(242, 212, 94), rgb(211, 77, 0));
 }
+
 p.bees {
-	font-family: "Verdana";
-	font-size: 300%;
-	font-weight: bolder;
+    font-family: "Verdana";
+    font-size: 300%;
+    font-weight: bolder;
 }
+
 p.bees2 {
-	font-family: "Verdana";
-	font-size: 400%;
-	font-weight: bolder;
+    font-family: "Verdana";
+    font-size: 400%;
+    font-weight: bolder;
 }
+
 ul {
-	font-family: "Lucida Grande";
-	font-size: 125%;
+    font-family: "Lucida Grande";
+    font-size: 125%;
 }
