--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,12 @@ body {
     background: linear-gradient(rgb(242, 212, 94), rgb(211, 77, 0));
 }
 
-p.bees {
+.bees {
     font-family: "Verdana";
     font-size: 300%;
     font-weight: bolder;
 }
 
-p.bees2 {
-    font-family: "Verdana";
-    font-size: 400%;
-    font-weight: bolder;
-}
 
 ul {
     font-family: "Lucida Grande";
